# ipyranet-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
source/: IPyraNet.cxx  IPyraNet.h  IPyraNet1DLayer.cxx  IPyraNet1DLayer.h  IPyraNet2DLayer.cxx  IPyraNet2DLayer.h  IPyraNet2DSourceLayer.cxx  IPyraNet2DSourceLayer.h  IPyraNetActivationFunction.h  IPyraNetLayer.h  IPyraNetSigmoidFunction.h  IPyranetLayer.h  main.cxx
